# SudokuSolver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/SudokuSolver/: info.plist
DerivedData/SudokuSolver/Logs/Debug/: 016BB5E9-A9FC-41A6-B070-52FE9CF6723F.xcactivitylog  091B7070-165D-4E2A-A527-278A4FF93F5B.xcactivitylog  0FCB0C96-F4A6-42FF-A299-CB6F8DDCCC24.xcactivitylog  1C588D1C-DB9D-4B39-BF92-0C4C98EE1ED3.xcactivitylog  1EBAC963-7429-431A-AC89-9802085CD134.xcactivitylog  21247ABF-E613-4F85-9F93-20190FF97CB6.xcactivitylog  2EDFB183-F3D1-40C3-ADC3-9FFB91DF1AAB.xcactivitylog  301CCF07-2DA9-4CF2-B616-6E96C4E725E6.xcactivitylog  30B179E2-FE27-4D33-A357-D20E91C8140F.xcactivitylog  40E10062-6A9B-4502-BDFC-C10BC6D8F6C9.xcactivitylog  44157D37-E027-4C8F-A910-DA8AF140737C.xcactivitylog  475E06B2-2D09-4FC3-A3DA-4BC1567A8F08.xcactivitylog  4B739D3E-A78E-469D-83B9-B406E6A7CAC4.xcactivitylog  4C5946E6-526B-4B3B-911A-50CB6171B7AF.xcactivitylog  5DA9ED14-6A1F-40FF-B5D7-1C65F1390F7A.xcactivitylog  8D83A8BD-5AEB-4D8D-A897-DEC216A31358.xcactivitylog  8E330A54-0243-4A1F-860B-8CE7F507D367.xcactivitylog  9537C479-68B1-4363-9B5C-5ED53DC2031C.xcactivitylog  97F896E6-EA11-4079-91C9-8538BAFF7CCA.xcactivitylog  9C05D7C9-B96C-4CB4-B163-B5C95FA15858.xcactivitylog  B62EB8BC-EF62-4D3C-A174-7F13AF5EC926.xcactivitylog  B6FA3841-E5D0-4F30-9B81-BD0760395BDB.xcactivitylog  BB1CCDCB-9BD3-4506-A236-87807007586C.xcactivitylog  C76BC940-92DB-4DED-9FAD-4805567FC7CC.xcactivitylog  CE469C6B-6216-4918-BF93-7BF42BFF93FE.xcactivitylog  CFB5227E-8B3D-42DB-A563-540F9974F24A.xcactivitylog  D5E2EC59-1E8B-4902-914F-20C85746A3F0.xcactivitylog  D662B031-4103-4976-A26A-50B0416A3293.xcactivitylog  DF003F7E-D6F7-4FB6-8F1D-60B11F5002A6.xcactivitylog  E27A1105-3E4C-406D-909C-9165E75A886A.xcactivitylog  F05CD1F6-1187-48BB-81AF-AD0A7003A99D.xcactivitylog  FF60009D-54D1-458D-AEBF-D368C0D900AE.xcactivitylog  LogStoreManifest.plist
DerivedData/SudokuSolver/Logs/Issues/: 54F838A2-AD6C-43DB-995B-1D3430B627C3.xcactivitylog  LogStoreManifest.plist
DerivedData/SudokuSolver/TextIndex/: TextFragmentIndex-v7.idx
SudokuSolver/: main.cpp
SudokuSolver.xcodeproj/: project.pbxproj
SudokuSolver.xcodeproj/xcshareddata/xcschemes/: SudokuSolver.xcscheme
SudokuSolver.xcodeproj/xcuserdata/willdouglas.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SudokuSolver.xcodeproj/xcuserdata/willdouglas.xcuserdatad/xcschemes/: xcschememanagement.plist
SudokuSolver/Header files/: BoardLogic.hpp  CommandLineUI.hpp  SudokuBoard.hpp  SudokuCell.hpp
SudokuSolver/Source files/: BoardLogic.cpp  CommandLineUI.cpp  SudokuBoard.cpp  SudokuCell.cpp  main.cpp
SudokuSolver/SudokuSolverLib/UI/include/: CommandLineUI.hpp  UserInterface.hpp
SudokuSolver/SudokuSolverLib/UI/src/: CommandLineUI.cpp  JsonSudokuHandler.cpp
SudokuSolver/SudokuSolverLib/sudoku/include/: ClassicSudokuBoard.hpp  (+1 more)
SudokuSolver/SudokuSolverTest/: main.cpp
SudokuSolver/local/include/: BoardLogic.hpp  CommandLineUI.hpp  JsonSudokuHandler.hpp  Point.hpp  Sudoku.hpp  SudokuBoard.hpp  SudokuCell.hpp  SudokuSolver.hpp  Timer.hpp
SudokuSolver/local/src/: BoardLogic.cpp  CommandLineUI.cpp  JsonSudokuHandler.cpp  SudokuBoard.cpp  SudokuCell.cpp  Timer.cpp  main.cpp
SudokuSolverTest/: main.cpp
data/: sample_board_0.json
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example1.cpp
include/IOHandling/: CommandLineUI.hpp  JsonSudokuHandler.hpp  UserInterface.hpp
include/UI/: JsonSudokuHandler.hpp
include/sudoku/: ClassicSudokuBoard.hpp  RecursiveSudokuSolver.hpp  Sudoku.hpp  SudokuCell.hpp  SudokuFactory.hpp  SudokuSolver.hpp
resources/: sample_board_1.json
src/IOHandling/: CommandLineUI.cpp  JsonSudokuHandler.cpp
src/common/: JsonSudokuHandler.cpp  Timer.cpp
src/sudoku/: ClassicSudokuBoard.cpp  RecursiveSudokuSolver.cpp  Sudoku.cpp  SudokuCell.cpp  SudokuFactory.cpp
tools/: convertToJson.py
(+546 files in other folders)
